# crovio

./: docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  sqlite.db
backend/alembic/: env.py
backend/alembic/versions/: 0672b43764ad_create_user_table.py  8647608d93b3_initial_schema.py  ff50471b2619_init_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routers/: __init__.py  auth.py  chats.py  community.py  crop.py  dealers.py  farmers.py  prices.py  products.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  community.py  crop.py  dealer.py  farmer.py  product.py  users.py
backend/app/schemas/: community.py  crop.py  dealer.py  product.py  token.py  user.py
backend/app/tests/: conftest.py  test_api_v1.py  test_dealers.py
backend/app/utils/: jwt.py  security.py
backend/db/: session.py
backend/models/: __init__.py  dealer.py
backend/schemas/: dealer.py
backend/scripts/: create_migration.sh  seeds.py
pwa/: Dockerfile  README.md  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
pwa/app/: layout.tsx
pwa/app/connect/: page.tsx
pwa/app/login/: page.tsx
pwa/app/markets/: page.tsx
pwa/app/prices/: page.tsx
pwa/app/register/: page.tsx
pwa/components/Navbar/: index.tsx
pwa/e2e/: auth.spec.ts
pwa/playwright-report/: index.html
pwa/public/: manifest.json
pwa/src/: App.tsx  index.css
pwa/src/components/: Footer.tsx  HowItWorks.tsx  Navigation.tsx  (+3 more)
(+41 files in other folders)
