[project]
name = "crovio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
]
